--- a/test-output/old/UMRegressionSuite/classes.html
+++ b/test-output/old/UMRegressionSuite/classes.html
@@ -140,12 +140,12 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>CADMN1</td>
+<td>CADMN27</td>
 <td>Regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>CADMN27</td>
+<td>CADMN1</td>
 <td>Regression </td>
 </tr>
 <tr>
@@ -185,12 +185,12 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ADMN058B</td>
+<td>CADMN21</td>
 <td>Regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>CADMN21</td>
+<td>ADMN058B</td>
 <td>Regression </td>
 </tr>
 <tr>
@@ -305,12 +305,12 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>CADMN10</td>
+<td>CADMN32</td>
 <td>Regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>CADMN32</td>
+<td>CADMN10</td>
 <td>Regression </td>
 </tr>
 <tr>
@@ -419,6 +419,11 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>ADMN054</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
 <td>ADMN098</td>
 <td>Regression </td>
 </tr>
@@ -429,17 +434,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ADMN054</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
 <td>ADMN097</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ADMN117A</td>
 <td>Regression </td>
 </tr>
 <tr>
@@ -449,7 +444,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ADMN096</td>
+<td>ADMN117A</td>
 <td>Regression </td>
 </tr>
 <tr>
@@ -459,12 +454,17 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ADMN094</td>
+<td>ADMN096</td>
 <td>Regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>ADMN050</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>ADMN094</td>
 <td>Regression </td>
 </tr>
 <tr>
@@ -489,12 +489,12 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ADMN077B</td>
+<td>ADMN105</td>
 <td>Regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ADMN105</td>
+<td>ADMN077B</td>
 <td>Regression </td>
 </tr>
 <tr>
@@ -549,12 +549,12 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ADMN116</td>
+<td>ADMN054A</td>
 <td>Regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ADMN054A</td>
+<td>ADMN116</td>
 <td>Regression </td>
 </tr>
 <tr>
@@ -584,12 +584,12 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ADMN119A</td>
+<td>ADMN073</td>
 <td>Regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ADMN073</td>
+<td>ADMN119A</td>
 <td>Regression </td>
 </tr>
 <tr>
@@ -713,12 +713,12 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ADMN036D</td>
+<td>ADMN037A</td>
 <td>Regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ADMN037A</td>
+<td>ADMN036D</td>
 <td>Regression </td>
 </tr>
 <tr>
@@ -748,12 +748,12 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ADMN021</td>
+<td>ADMN130</td>
 <td>Regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ADMN130</td>
+<td>ADMN021</td>
 <td>Regression </td>
 </tr>
 <tr>
@@ -773,7 +773,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ADMN037F</td>
+<td>ADMN069I</td>
 <td>Regression </td>
 </tr>
 <tr>
@@ -783,12 +783,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ADMN069I</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ADMN041B</td>
+<td>ADMN037F</td>
 <td>Regression </td>
 </tr>
 <tr>
@@ -798,12 +793,12 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ADMN041A</td>
+<td>ADMN041B</td>
 <td>Regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ADMN037C</td>
+<td>ADMN041A</td>
 <td>Regression </td>
 </tr>
 <tr>
@@ -813,7 +808,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ADMN037B</td>
+<td>ADMN037C</td>
 <td>Regression </td>
 </tr>
 <tr>
@@ -823,12 +818,17 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ADMN016a</td>
+<td>ADMN037B</td>
 <td>Regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>ADMN126A</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>ADMN016a</td>
 <td>Regression </td>
 </tr>
 <tr>
@@ -843,22 +843,12 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ADMN021A</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
 <td>ADMN069E</td>
 <td>Regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ADMN037E</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ADMN027</td>
+<td>ADMN021A</td>
 <td>Regression </td>
 </tr>
 <tr>
@@ -873,12 +863,22 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ADMN037D</td>
+<td>ADMN027</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>ADMN037E</td>
 <td>Regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>ADMN069C</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>ADMN037D</td>
 <td>Regression </td>
 </tr>
 <tr>
@@ -938,12 +938,12 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ADMN042A</td>
+<td>ADMN034D</td>
 <td>Regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ADMN034D</td>
+<td>ADMN042A</td>
 <td>Regression </td>
 </tr>
 <tr>
@@ -1033,12 +1033,12 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ADMN039B</td>
+<td>ADMN129</td>
 <td>Regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ADMN129</td>
+<td>ADMN039B</td>
 <td>Regression </td>
 </tr>
 <tr>
@@ -1058,12 +1058,17 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>ADMN127</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
 <td>ADMN043A</td>
 <td>Regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ADMN127</td>
+<td>ADMN126</td>
 <td>Regression </td>
 </tr>
 <tr>
@@ -1078,22 +1083,17 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ADMN126</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
 <td>ADMN015</td>
 <td>Regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ADMN044</td>
+<td>ADMN026</td>
 <td>Regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ADMN026</td>
+<td>ADMN044</td>
 <td>Regression </td>
 </tr>
 <tr>
@@ -1122,6 +1122,55 @@
 <tr>
 <td>&nbsp;</td>
 <td>PreSetup</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>Setup</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>Teardown</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>endReport</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>com.vrt.testcases.LoginTest</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>LOGIN_001b</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>LOGIN_001c</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>LOGIN_001</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>PreSetUp</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
