--- a/test-output/ER_LoginTest.html
+++ b/test-output/ER_LoginTest.html
@@ -53,7 +53,7 @@
 					<i class='mdi-hardware-desktop-windows'></i>
 				</li>
 				<li>
-					<span class='suite-started-time'>2021-08-07 22:16:52</span>
+					<span class='suite-started-time'>2021-12-07 22:35:13</span>
 				</li>
 				<li>
 					<span>v2.41.1</span>
@@ -83,25 +83,25 @@
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-current'> 
 							<span class='panel-name'>Total Time Taken (Current Run)</span> 
-							<span class='suite-total-time-current-value panel-lead'>0h 0m 50s+819ms</span> 
+							<span class='suite-total-time-current-value panel-lead'>0h 1m 5s+294ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-overall'> 
 							<span class='panel-name'>Total Time Taken (Overall)</span> 
-							<span class='suite-total-time-overall-value panel-lead'>0h 0m 50s+819ms</span> 
+							<span class='suite-total-time-overall-value panel-lead'>0h 1m 5s+294ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-start-time'>
 						<div class='card accent green-accent'> 
 							<span class='panel-name'>Start</span> 
-							<span class='panel-lead suite-started-time'>2021-08-07 22:16:01</span> 
+							<span class='panel-lead suite-started-time'>2021-12-07 22:34:07</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-end-time'>
 						<div class='card accent pink-accent'> 
 							<span class='panel-name'>End</span> 
-							<span class='panel-lead suite-ended-time'>2021-08-07 22:16:52</span> 
+							<span class='panel-lead suite-ended-time'>2021-12-07 22:35:13</span> 
 						</div> 
 					</div>
 				</div>
@@ -198,6 +198,10 @@
 											<td>ScriptVersion</td>
 											<td>1.0.0.0</td>
 										</tr>
+										<tr>
+											<td>VRT Version</td>
+											<td>1.2.0.24</td>
+										</tr>
 								</tbody>
 							</table>
 						</div>
@@ -253,7 +257,7 @@
 						<div class='card-panel no-padding-h no-padding-v no-margin-v'>
 							<div class='wrapper'>
 								<ul id='test-collection' class='test-collection'>
-										<li class='collection-item test displayed active pass ' extentid='853ab6f8-9817-4c8a-af7f-18d026d701e6'>
+										<li class='collection-item test displayed active pass ' extentid='d51f9b02-b91e-4705-ba22-0648a9b3c4fd'>
 											<div class='test-head'>
 												<span class='test-name'>LOGIN_001- Verify if user can log into the Kaye Application after installation with default provided credentials </span>
 												<span class='test-status label right outline capitalize pass'>pass</span>
@@ -261,9 +265,9 @@
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2021-08-07 22:16:08</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2021-08-07 22:16:22</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 13s+234ms</span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2021-12-07 22:34:30</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2021-12-07 22:34:47</span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 16s+572ms</span>
 												</div>
 												<div class='test-desc'></div>
 												<div class='test-attributes'>
@@ -280,7 +284,7 @@
 														<tbody>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>22:16:22</td>
+																	<td class='timestamp'>22:34:47</td>
 																	<td class='step-details'>Test Case PASSED IS # LOGIN_001 #</td>
 																</tr>
 														</tbody>
@@ -290,7 +294,7 @@
 												</div>
 											</div>
 										</li>
-										<li class='collection-item test displayed active pass ' extentid='2a50a51c-47cb-464c-a247-9a0dbcf12934'>
+										<li class='collection-item test displayed active pass ' extentid='39637fba-46e5-47b8-9956-6c8b93974ade'>
 											<div class='test-head'>
 												<span class='test-name'>LOGIN_001b-Verify that Policies,Preferences screens are disabled for login with First installation </span>
 												<span class='test-status label right outline capitalize pass'>pass</span>
@@ -298,9 +302,9 @@
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2021-08-07 22:16:27</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2021-08-07 22:16:41</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 13s+291ms</span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2021-12-07 22:34:55</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2021-12-07 22:35:12</span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 17s+29ms</span>
 												</div>
 												<div class='test-desc'></div>
 												<div class='test-attributes'>
@@ -317,45 +321,8 @@
 														<tbody>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>22:16:41</td>
+																	<td class='timestamp'>22:35:12</td>
 																	<td class='step-details'>Test Case PASSED IS # LOGIN_001b #</td>
-																</tr>
-														</tbody>
-													</table>
-													<ul class='collapsible node-list' data-collapsible='accordion'>
-													</ul>
-												</div>
-											</div>
-										</li>
-										<li class='collection-item test displayed active pass ' extentid='1a99efc0-0389-4b78-a0d9-6e2c17c3d3ec'>
-											<div class='test-head'>
-												<span class='test-name'>LOGIN_001_2 -Verify the first time app install login credentials with incorrect password </span>
-												<span class='test-status label right outline capitalize pass'>pass</span>
-												<span class='category-assigned hide '></span>
-											</div>
-											<div class='test-body'>
-												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2021-08-07 22:16:46</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2021-08-07 22:16:51</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 4s+734ms</span>
-												</div>
-												<div class='test-desc'></div>
-												<div class='test-attributes'>
-												</div>
-												<div class='test-steps'>
-													<table class='bordered table-results'>
-														<thead>
-															<tr>
-																<th>Status</th>
-																<th>Timestamp</th>
-																<th>Details</th>
-															</tr>
-														</thead>
-														<tbody>
-																<tr>
-																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>22:16:51</td>
-																	<td class='step-details'>Test Case PASSED IS # LOGIN_001c #</td>
 																</tr>
 														</tbody>
 													</table>
