--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,310 +4,230 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.vrt.testcases.assetDetailsTest1</td>
+<td>com.vrt.testcases.EquipmentCreationTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ASST052B</td>
+<td>EN_003</td>
 <td>Regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ASST025STP</td>
+<td>EN_019A</td>
 <td>Regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ASST027</td>
+<td>EN_014</td>
 <td>Regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ASST009</td>
+<td>EN_039_EN_040</td>
 <td>Regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ASST008</td>
+<td>EN_015</td>
 <td>Regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ASST007</td>
+<td>EN_032</td>
 <td>Regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ASST006</td>
+<td>EN_031</td>
 <td>Regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ASST052A</td>
+<td>EN_033</td>
 <td>Regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ASST004</td>
+<td>EN_028</td>
 <td>Regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ASST048</td>
+<td>EN_012</td>
 <td>Regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ASST003</td>
+<td>EN_005</td>
 <td>Regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ASST047</td>
+<td>EN_029</td>
 <td>Regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ASST013</td>
+<td>EN_006</td>
 <td>Regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ASST012</td>
+<td>EN_011</td>
 <td>Regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ASST056</td>
+<td>EN_013</td>
 <td>Regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ASST024STP</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ASST024_D</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ASST050</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ASST024_C</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ASST090</td>
+<td>EN_051</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>ASST024_F</td>
+<td>EN_008</td>
 <td>Regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ASST018</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ASST017</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ASST015</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ASST059</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ASST014</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ASST068</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ASST023</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ASST065</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ASST020</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ASST024_A</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ASST062</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ASST024_E</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ASST037</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ASST001B</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ASST054A_REP</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ASST029</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ASST024_B</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ASST034</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ASST078</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ASST033</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ASST077</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ASST032</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ASST076</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ASST075</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ASST030</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ASST074</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ASST026STP</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ASST001A</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ASST053A</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ASST038</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ASST053B</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ASST002</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ASST001</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ASST088</td>
+<td>EN_048_1</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>ASST044</td>
+<td>EN_025</td>
 <td>Regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ASST043</td>
+<td>EN_035</td>
 <td>Regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ASST087</td>
+<td>EN_024</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>EN_027</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>EN_049</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>ASST086</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>ASST084</td>
+<td>EN_002</td>
 <td>Regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ASST081</td>
+<td>EN_026</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>EN_048</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>EN_043</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>EN_021</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>EN_020</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>EN_042</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>EN_007</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>EN_023</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>EN_045</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>EN_009</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>EN_022</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>EN_029_EN_030</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>EN_044</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>EN_004</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>EN_010</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>EN_018</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>EH_001</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>EN_017</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>EN_019</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>EN_029A</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>EN_041_EN_046</td>
 <td>Regression </td>
 </tr>
 <tr>
@@ -336,6 +256,6 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>endReport_releaseMomory</td>
+<td>endReport</td>
 <td>&nbsp;</td></tr>
 </table>
